--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,7 +3,23 @@
       <%= form.label :name %>
       <%= form.text_field :name %>
     </div>
-  
+    <div>
+      <%= form.label :price %>
+      <%= form.text_field :price %>
+    </div>
+    <div>
+      <%= form.label :des %>
+      <%= form.text_field :des %>
+    </div>
+    <div>
+        <%= form.label :description, style: "display: block" %>
+        <%= form.rich_text_area :description %>
+    </div>
+
+    <div>
+        <%= form.label :featured_image, style: "display: block" %>
+        <%= form.file_field :featured_image, accept: "image/*" %>
+    </div>
     <div>
       <%= form.submit %>
     </div>
