--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,11 @@
+<%= image_tag @product.featured_image if @product.featured_image.attached? %>
+
+
 <h1><%= @product.name %></h1>
+<h1><%= @product.price %></h1>
+<h1><%= @product.des %></h1>
+
+<%= @product.description %>
 
 <%= link_to "Back", products_path %>
 
