--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,12 @@
-<h1>Edit product</h1>
+<style>
+    .header-nav{
+        display: none;
+    }
+
+    .main-content{
+        margin-top: 0px;
+    }
+</style>
 
 <%= render "form", product: @product %>
-<%= link_to "Cancel", @product %>
+<%= link_to "Hủy", @product %>
